traversal.snake.Snake.scala.error
Compilation error:
Snake:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()==true){
  ^Snake:41: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^